fixed spacing around settings

--- a/src/pages/settings/Settings.scss
+++ b/src/pages/settings/Settings.scss
@@ -45,4 +45,8 @@
  .nav-link {
       margin-left: 1em;
   }
+  .row {
+     margin-right: 0px;
+     margin-left: 0px;
+  }
 
